--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,8 +14,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Echo Hello World
-        run: echo "Hello World"
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Build Code
+        run: |
+          npm ci
+          npm run build
       
 
 
