--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,6 +22,12 @@ jobs:
           npm ci
           npm run build
       
+      - name: Deploy to GH Pages
+        run: |
+          git config --global user.email ${{ secrets.GH_EMAIL }}
+          git config --global user.name ${{ secrets.GH_USERNAME }}
+          git remote set-url origin https://${{ secrets.GH_PAT }}@github.com/${{ secrets.GH_USERNAME }}/first-react-app.git
+
 
 
 ###
