--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ jobs:
         run: |
           git config --global user.email ${{ secrets.GH_EMAIL }}
           git config --global user.name ${{ secrets.GH_USERNAME }}
-          git remote set-url origin https://${{ secrets.GH_PAT }}@github.com/${{ secrets.GH_USERNAME }}/first-react-app.git
+          git remote set-url origin https://${{ secrets.GH_PAT }}@github.com/first-react-app.git
           npm run deploy
 
 
